--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "lldb",
             "request": "launch",
             "name": "Debug",
-            "program": "philo/philo",
+            "program": "philo_bonus/philo_bonus",
             "args": ["5", "800", "200", "200"],
             "cwd": "${workspaceFolder}"
         }
