--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
             "type": "lldb",
             "request": "launch",
             "name": "Debug",
-            "program": "philo_bonus/philo_bonus",
-            "args": ["5", "800", "200", "200"],
+            "program": "philo/philo",
+            "args": ["4", "410", "200", "200"],
             "cwd": "${workspaceFolder}"
         }
     ]
